--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -257,6 +257,9 @@ body {
     font-size: 25px;
     font-weight: bold;
     text-transform: uppercase; }
+  .sub-menu hr {
+    width: 70%;
+    opacity: 0.7; }
 
 .sub-menu__flex {
   display: -webkit-box;
@@ -276,16 +279,16 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  top: -400px;
+  top: -475px;
   width: auto;
-  height: 420px;
+  height: 480px;
   background: rgba(0, 0, 0, 0.7);
   -webkit-transition: 0.8s;
   transition: 0.8s;
   z-index: 5; }
   .sub-menu__box:hover {
-    -webkit-transform: translateY(400px);
-    transform: translateY(400px); }
+    -webkit-transform: translateY(475px);
+    transform: translateY(475px); }
   .sub-menu__box:hover .sub-menu__arrow {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
@@ -353,6 +356,41 @@ body {
   transition: 0.3s;
   outline: none;
   z-index: 5; }
+
+.sub-menu__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  padding: 0 30px;
+  padding-top: 30px;
+  padding-bottom: 5px; }
+
+.sub-menu__link {
+  width: 26px;
+  height: 26px;
+  padding: 0 !important;
+  opacity: 0.7; }
+  .sub-menu__link:hover {
+    opacity: 1;
+    -webkit-transform: none !important;
+    transform: none !important; }
+
+.sub-menu__link--facebook {
+  background: url("../img/sub-f.png") no-repeat top; }
+
+.sub-menu__link--google {
+  background: url("../img/sub-g.png") no-repeat top; }
+
+.sub-menu__link--youtube {
+  background: url("../img/sub-y.png") no-repeat top; }
+
+.sub-menu__link--linkedin {
+  background: url("../img/sub-l.png") no-repeat top; }
+
+.sub-menu__link--twitter {
+  background: url("../img/sub-t.png") no-repeat top; }
 
 @media screen and (max-width: 1200px) {
   .sub-menu {
