add social link

--- a/assets/templates/forex/templates/funding.html
+++ b/assets/templates/forex/templates/funding.html
@@ -37,8 +37,8 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>FUNDING AND WITHDRAWAL</p>
-        <div class="sub-menu__box  sub-menu__box--funding">
+        <p>Funding and Withdrawal</p>
+        <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
@@ -48,6 +48,14 @@
           <a href="#">TRADING SPECIFICATION</a>
           <a href="#">FUNDING AND WITHDROVAL</a>
           <a href="#">ANNOUNCEMENTS</a>
+          <div class="sub-menu__social">
+            <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--youtube" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--linkedin" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--twitter" href="#"></a>
+          </div>
+          <hr>
           <button class="sub-menu__arrow"></button>
         </div>
       </div>
