--- a/assets/templates/forex/templates/contact-us.html
+++ b/assets/templates/forex/templates/contact-us.html
@@ -48,6 +48,14 @@
           <a href="#">TRADING SPECIFICATION</a>
           <a href="#">FUNDING AND WITHDROVAL</a>
           <a href="#">ANNOUNCEMENTS</a>
+          <div class="sub-menu__social">
+            <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--youtube" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--linkedin" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--twitter" href="#"></a>
+          </div>
+          <hr>
           <button class="sub-menu__arrow"></button>
         </div>
       </div>
