--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -27,3 +27,5 @@
 @import 'blocks/contact-us';
 @import 'blocks/form';
 @import 'blocks/legal';
+@import 'blocks/account-comparison';
+@import 'blocks/tabs';
