--- a/assets/templates/forex/sass/blocks/account-comparison.scss
+++ b/assets/templates/forex/sass/blocks/account-comparison.scss
@@ -1,3 +1,7 @@
+.account-comparison {
+  padding-bottom: 50px;
+}
+
 .account-comparison__control {
   display: flex;
   // justify-content: space-between;
