--- a/assets/templates/forex/templates/account-comparison.html
+++ b/assets/templates/forex/templates/account-comparison.html
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div id="Commodities" class="tab__content  tab__content--commodities">
-        <div class="tab__origin">
+        <div class="tab__originc">
           <h3>Commodities</h3>
           <p>Lorem ipsum dolor sit amet.</p> 
         </div>
