new page with tabs

--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -1734,3 +1734,6 @@ button[type="submit"] {
     background: tomato; }
   .stocks:focus {
     background: tomato; }
+
+.product-specification {
+  padding: 50px 0; }
