--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -30,3 +30,4 @@
 @import 'blocks/account-comparison';
 @import 'blocks/tabs';
 @import 'blocks/product-specification';
+@import 'blocks/resources';
