--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -1737,3 +1737,73 @@ button[type="submit"] {
 
 .product-specification {
   padding: 50px 0; }
+
+.resources {
+  padding: 50px 0 100px 0; }
+  .resources hr {
+    height: 2px;
+    margin: 50px 0;
+    border: none;
+    background: #2e2963;
+    opacity: 0.7; }
+
+.resources__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+  .resources__flex a {
+    line-height: 80px;
+    width: 78px;
+    height: 80px;
+    color: #fff;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background: url("../img/res.png") no-repeat bottom;
+    -webkit-transition: 0.1s;
+    transition: 0.1s; }
+    .resources__flex a:hover {
+      color: #2e2963;
+      background: url("../img/res-h.png") no-repeat top, url("../img/res.png") no-repeat bottom; }
+
+.resources__text {
+  color: #2e2963; }
+  .resources__text b {
+    font-size: 20px;
+    text-transform: uppercase; }
+
+.resources__faq {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  .resources__faq h3 {
+    margin-bottom: 0;
+    color: #2e2963;
+    font-size: 30px;
+    text-transform: uppercase; }
+  .resources__faq b {
+    padding-bottom: 30px;
+    color: #2e2963;
+    font-size: 18px;
+    text-transform: uppercase; }
+  .resources__faq a {
+    padding: 25px;
+    padding-left: 80px;
+    color: #2e2963;
+    text-decoration: none;
+    background: url("../img/faq.png") no-repeat left;
+    -webkit-transition: 0.1s;
+    transition: 0.1s; }
+    .resources__faq a:hover {
+      font-size: 18px;
+      font-weight: bold; }
