--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" type="image/ico" href="favicon.ico">
 </head>
 <body>
   <header class="page-header">
