--- a/assets/templates/forex/templates/resources.html
+++ b/assets/templates/forex/templates/resources.html
@@ -62,36 +62,36 @@
     </div>
   </section>
   <section class="resources">
+    <div class="resources__flex">
+      <a href="#">A</a>
+      <a href="#">B</a>
+      <a href="#">C</a>
+      <a href="#">D</a>
+      <a href="#">E</a>
+      <a href="#">F</a>
+      <a href="#">G</a>
+      <a href="#">H</a>
+      <a href="#">I</a>
+      <a href="#">J</a>
+      <a href="#">K</a>
+      <a href="#">L</a>
+      <a href="#">M</a>
+      <a href="#">N</a>      
+    </div>
+    <div class="resources__flex">
+      <a href="#">O</a>
+      <a href="#">P</a>
+      <a href="#">Q</a>
+      <a href="#">R</a>
+      <a href="#">S</a>
+      <a href="#">U</a>
+      <a href="#">V</a>
+      <a href="#">W</a>
+      <a href="#">X</a>
+      <a href="#">Y</a>
+      <a href="#">Z</a>
+    </div>
     <div class="container">
-      <div class="resources__flex">
-        <a href="#">A</a>
-        <a href="#">B</a>
-        <a href="#">C</a>
-        <a href="#">D</a>
-        <a href="#">E</a>
-        <a href="#">F</a>
-        <a href="#">G</a>
-        <a href="#">H</a>
-        <a href="#">I</a>
-        <a href="#">J</a>
-        <a href="#">K</a>
-        <a href="#">L</a>
-      </div>
-      <div class="resources__flex">
-        <a href="#">M</a>
-        <a href="#">N</a>
-        <a href="#">O</a>
-        <a href="#">P</a>
-        <a href="#">Q</a>
-        <a href="#">R</a>
-        <a href="#">S</a>
-        <a href="#">U</a>
-        <a href="#">V</a>
-        <a href="#">W</a>
-        <a href="#">X</a>
-        <a href="#">Y</a>
-        <a href="#">Z</a>
-      </div>
       <hr>
       <div class="resources__text">
         <p><b>Sebi</b><br>The Securities and Exchange Board of India, or SEBI, serves to protect the interest of investors in Indian securities and to regulate the Indian securities market.</p>
@@ -102,7 +102,7 @@
         <p><b>Spot-Next</b><br>Often referred to as “S/N”, it refers to the rate on balances from the next business day to the business day thereafter. Due to time zone and other criteria, Spot-Next rates are sometimes used as the short-term reference.</p>
         <p><b>Spot/Next Roll</b><br>The procedure to move the spot settlement value date on an open position one day forward to the next suitable value date.</p>
         <p><b>Spread</b><br>In trading, this term refers to the distance between the bid and ask prices being quoted. If XYZ stock has a bid of 21.45 and an ask of 21.51, then the spread on this stock is 0.06.</p>
-        <p><b>Stock Split</b>A type of corporate action that increases a company’s number of outstanding shares by dividing each share, which in turn diminishes its price. In the case of a 2-for-1 (2:1) stock split, for example, the company will distribute an additional share for every one outstanding share, so the total shares outstanding will double A split can also be referred to in percentage terms. Thus, a 2 for 1 (2:1) split can also be termed a stock split of 100%. A 3 for 2 split (3:2) would be a 50% split.</p>
+        <p><b>Stock Split</b><br>A type of corporate action that increases a company’s number of outstanding shares by dividing each share, which in turn diminishes its price. In the case of a 2-for-1 (2:1) stock split, for example, the company will distribute an additional share for every one outstanding share, so the total shares outstanding will double A split can also be referred to in percentage terms. Thus, a 2 for 1 (2:1) split can also be termed a stock split of 100%. A 3 for 2 split (3:2) would be a 50% split.</p>
       </div>
       <div class="resources__faq">
         <h3>Faq</h3>
