--- a/assets/templates/forex/templates/security.html
+++ b/assets/templates/forex/templates/security.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Resources - Forex 24</title>
+  <title>Security of Funds - Forex 24</title>
   <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
   <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
@@ -37,7 +37,7 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>Resources</p>
+        <p>Security of Funds</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
@@ -61,58 +61,17 @@
       </div>
     </div>
   </section>
-  <section class="resources">
-    <div class="resources__flex">
-      <a href="#">A</a>
-      <a href="#">B</a>
-      <a href="#">C</a>
-      <a href="#">D</a>
-      <a href="#">E</a>
-      <a href="#">F</a>
-      <a href="#">G</a>
-      <!-- <a href="#">H</a> -->
-      <a href="#">I</a>
-      <!-- <a href="#">J</a> -->
-      <a href="#">K</a>
-      <a href="#">L</a>
-      <a href="#">M</a>     
-    </div>
-    <div class="resources__flex  resources__flex--second">    
-      <a href="#">N</a>
-      <a href="#">O</a> 
-      <a href="#">P</a>
-      <a href="#">Q</a>
-      <a href="#">R</a>
-      <a href="#">S</a>
-      <a href="#">T</a>
-      <a href="#">U</a>
-      <a href="#">V</a>
-      <!-- <a href="#">W</a>
-      <a href="#">X</a>
-      <a href="#">Y</a>
-      <a href="#">Z</a> -->
-    </div>
+  <section class="security">
     <div class="container">
-      <hr>
-      <div class="resources__text">
-        <p><b>Sebi</b><br>The Securities and Exchange Board of India, or SEBI, serves to protect the interest of investors in Indian securities and to regulate the Indian securities market.</p>
-        <p><b>Securitization</b><br>The creation of asset-backed securities (ABS). The assets to be securitized are sold to a special purpose vehicle (SPV), thus isolating the borrower from any claims for repayment. The SPV then issues bonds or other debt instruments which can be traded. The money raised by the issuance of the debt is used to pay the borrower for the assets. Mortgages are one example of a security which can be securitized.</p>
-        <p><b>Settlement currency</b><br>In forex (fx) trading, the settlement currency (also referred to as payment currency) is the second currency listed in the currency pair description (example: EUR.USD). The transaction currency multiplied by the exchange rate will indicate the settlement currency amount for the transaction. For example, an order to buy 100,000 EUR.USD @ 1.353 has a settlement currency amount of USD 135,300.</p>
-        <p><b>Single Stock Future</b><br>A Single Stock Future (SSF) is a future contract where the underlying is an individual stock or a narrow based index. 1 SSF contract represents 100 shares of the underlying stock. A long SSF represents 100 shares long, and conversely a short SSF represents 100 shares short. It is similar to an option contract, but without a strike price.</p>
-        <p><b>Spot</b><br>Spot refers to a trade or transaction conducted for immediate settlement which in most markets is within two working days. The cash market for forex is often referred to as the “Spot Market”.</p>
-        <p><b>Spot-Next</b><br>Often referred to as “S/N”, it refers to the rate on balances from the next business day to the business day thereafter. Due to time zone and other criteria, Spot-Next rates are sometimes used as the short-term reference.</p>
-        <p><b>Spot/Next Roll</b><br>The procedure to move the spot settlement value date on an open position one day forward to the next suitable value date.</p>
-        <p><b>Spread</b><br>In trading, this term refers to the distance between the bid and ask prices being quoted. If XYZ stock has a bid of 21.45 and an ask of 21.51, then the spread on this stock is 0.06.</p>
-        <p><b>Stock Split</b><br>A type of corporate action that increases a company’s number of outstanding shares by dividing each share, which in turn diminishes its price. In the case of a 2-for-1 (2:1) stock split, for example, the company will distribute an additional share for every one outstanding share, so the total shares outstanding will double A split can also be referred to in percentage terms. Thus, a 2 for 1 (2:1) split can also be termed a stock split of 100%. A 3 for 2 split (3:2) would be a 50% split.</p>
-      </div>
-      <div class="resources__faq">
-        <h3>Faq</h3>
-        <b>Partnership</b>
-        <a href="#">How can I open an Affiliate Account?</a>
-        <a href="#">Can I use the same email as my trading account?</a>
-        <a href="#">Can I use the same email as my trading account?</a>
-        <a href="#">Can I use the same email as my trading account?</a>
-        <a href="#">Can I use the same email as my trading account?</a>
+      <div class="security__flex">
+        <div class="security__left"></div>
+        <div class="security__right">
+          <p><b>Regulation</b><br>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number 300/16. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
+          <p><b></b></p>
+          <p><b></b></p>
+          <p><b></b></p>
+          <p><b></b></p>
+        </div>
       </div>
     </div>
   </section>
