--- a/assets/templates/forex/sass/blocks/resources.scss
+++ b/assets/templates/forex/sass/blocks/resources.scss
@@ -12,18 +12,18 @@
 
 .resources__flex {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   // flex-wrap: wrap;
-  width: 90%;
+  width: 55%;
   margin: auto;
   
   & a {
-    line-height: 80px;
-    width: 78px;
-    height: 80px;
+    width: 65px;
+    height: 68px;
     color: #fff;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bold;
+    line-height: 66px;
     text-align: center;
     text-decoration: none;
     background: url('../img/res.png') no-repeat bottom;
@@ -35,6 +35,11 @@
                   url('../img/res.png') no-repeat bottom;
     }
   }
+}
+
+.resources__flex--second {
+  justify-content: space-around;
+  width: 51%;
 }
 
 .resources__text {
