--- a/assets/templates/forex/sass/blocks/sub-menu.scss
+++ b/assets/templates/forex/sass/blocks/sub-menu.scss
@@ -94,6 +94,16 @@
   left: 40px;
 }
 
+.sub-menu__box--resources {
+  top: -340px;
+  left: 140px;
+  height: 350px;
+  
+  &:hover {
+    transform: translateY(340px);
+  }
+}
+
 .sub-menu__logo {
   margin-top: 10px;
   
