--- a/assets/templates/forex/templates/resources.html
+++ b/assets/templates/forex/templates/resources.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Resources - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
+  <title>Glossary - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -15,14 +13,11 @@
       <button class="page-header__toggle" type="button">Open menu</button>
       <div class="container">
         <div class="page-header__flex">
-          <!-- <a href="../index.html">
-            <img src="../img/logo.png" alt="Forex24">
-          </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
+            <li class="page-header__item"><a href="#">About</a></li>
             <li class="page-header__item"><a href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
             <li class="page-header__item"><a href="#">Contact Us</a></li>
           </ul>
@@ -37,17 +32,13 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>Resources</p>
-        <div class="sub-menu__box  sub-menu__box--about">
+        <p>Glossary</p>
+        <div class="sub-menu__box  sub-menu__box--resources">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a href="#">GLOSSARY</a>
+          <a href="#faq">FAQ</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
@@ -62,39 +53,33 @@
     </div>
   </section>
   <section class="resources">
-    <div class="resources__flex">
-      <a href="#">A</a>
-      <a href="#">B</a>
-      <a href="#">C</a>
-      <a href="#">D</a>
-      <a href="#">E</a>
-      <a href="#">F</a>
-      <a href="#">G</a>
-      <!-- <a href="#">H</a> -->
-      <a href="#">I</a>
-      <!-- <a href="#">J</a> -->
-      <a href="#">K</a>
-      <a href="#">L</a>
-      <a href="#">M</a>     
-    </div>
-    <div class="resources__flex  resources__flex--second">    
-      <a href="#">N</a>
-      <a href="#">O</a> 
-      <a href="#">P</a>
-      <a href="#">Q</a>
-      <a href="#">R</a>
-      <a href="#">S</a>
-      <a href="#">T</a>
-      <a href="#">U</a>
-      <a href="#">V</a>
-      <!-- <a href="#">W</a>
-      <a href="#">X</a>
-      <a href="#">Y</a>
-      <a href="#">Z</a> -->
-    </div>
     <div class="container">
+      <div class="resources__flex">
+        <a href="#">A</a>
+        <a href="#">B</a>
+        <a href="#">C</a>
+        <a href="#">D</a>
+        <a href="#">E</a>
+        <a href="#">F</a>
+        <a href="#">G</a>
+        <a href="#">I</a>
+        <a href="#">K</a>
+        <a href="#">L</a>        
+      </div>
+      <div class="resources__flex  resources__flex--second">  
+        <a href="#">M</a>   
+        <a href="#">N</a>
+        <a href="#">O</a> 
+        <a href="#">P</a>
+        <a href="#">Q</a>
+        <a href="#">R</a>
+        <a href="#">S</a>
+        <a href="#">T</a>
+        <a href="#">U</a>
+        <a href="#">V</a>
+      </div>
       <hr>
-      <div class="resources__text">
+      <!-- <div class="resources__text">
         <p><b>Sebi</b><br>The Securities and Exchange Board of India, or SEBI, serves to protect the interest of investors in Indian securities and to regulate the Indian securities market.</p>
         <p><b>Securitization</b><br>The creation of asset-backed securities (ABS). The assets to be securitized are sold to a special purpose vehicle (SPV), thus isolating the borrower from any claims for repayment. The SPV then issues bonds or other debt instruments which can be traded. The money raised by the issuance of the debt is used to pay the borrower for the assets. Mortgages are one example of a security which can be securitized.</p>
         <p><b>Settlement currency</b><br>In forex (fx) trading, the settlement currency (also referred to as payment currency) is the second currency listed in the currency pair description (example: EUR.USD). The transaction currency multiplied by the exchange rate will indicate the settlement currency amount for the transaction. For example, an order to buy 100,000 EUR.USD @ 1.353 has a settlement currency amount of USD 135,300.</p>
@@ -104,8 +89,8 @@
         <p><b>Spot/Next Roll</b><br>The procedure to move the spot settlement value date on an open position one day forward to the next suitable value date.</p>
         <p><b>Spread</b><br>In trading, this term refers to the distance between the bid and ask prices being quoted. If XYZ stock has a bid of 21.45 and an ask of 21.51, then the spread on this stock is 0.06.</p>
         <p><b>Stock Split</b><br>A type of corporate action that increases a company’s number of outstanding shares by dividing each share, which in turn diminishes its price. In the case of a 2-for-1 (2:1) stock split, for example, the company will distribute an additional share for every one outstanding share, so the total shares outstanding will double A split can also be referred to in percentage terms. Thus, a 2 for 1 (2:1) split can also be termed a stock split of 100%. A 3 for 2 split (3:2) would be a 50% split.</p>
-      </div>
-      <div class="resources__faq">
+      </div> -->
+      <div class="resources__faq" id="faq">
         <h3>Faq</h3>
         <b>Partnership</b>
         <a href="#">How can I open an Affiliate Account?</a>
@@ -179,8 +164,6 @@
       </div>
     </div>
   </footer>
-<!-- <script src="js/jquery.min.js"></script> -->
-<!-- <script src="js/slick/slick.min.js"></script> -->
 <script src="../js/mobile-menu.js"></script>
 </body>
 </html>
